--- a/portofolio.html
+++ b/portofolio.html
@@ -86,7 +86,7 @@
                     </p>
                 </div>
                 <button class="mx-auto mt-10 block transition duration-500 ease-in-out py-4 pb-5 p-8 bg-[#f96a42] rounded-lg hover:scale-105 focus-within:ring focus:ring-white">
-                    <a href="https://wa.me/6281615992725">
+                    <a href="index.html">
                         Kembali Ke Landing Page...
                     </a>
                 </button>
