--- a/portofolio.html
+++ b/portofolio.html
@@ -29,7 +29,7 @@
     <div class="container mx-auto font-poppins my-10 max-w-xl sm:max-w-2xl px-8 text-white">
         <div class="box1 bg-[#F87C58] rounded-t-md ">
             <a href="https://www.facebook.com/bryanz.id.9" target="_blank">
-                <img src="asset_img/bryanferyardiansyah.jpg" alt="bryanferyardiansyah" class="w-28 block mx-auto rounded-full translate-y-10 hover:scale-125 transition duration-500 ease-out">
+                <img src="bryanferyardiansyah.jpg" alt="bryanferyardiansyah" class="w-28 block mx-auto rounded-full translate-y-10 hover:scale-125 transition duration-500 ease-out">
             </a>
             <h1 class="text-center mt-16 text-2xl tracking-wide">Bryan Fery Ardiansyah</h1>
             <p class="text-sm font-extralight text-slate-800 text-center">Junior Web Developer</p>
@@ -59,7 +59,7 @@
             <div class="box2 bg-[#282A39] py-10 px-8">
                 <p class="text-center text-2xl  uppercase">Portofolio</p>
                 <div class="semibox1 hover:scale-105 transition-all duration-500 ease-in-out block bg-[#F87C58] rounded-md">
-                    <img src="asset_img/Screenshot 2024-02-01 233143.png" alt="Bstar_Project_Review" class="w-full object-cover mx-auto my-10">
+                    <img src="Screenshot 2024-02-01 233143.png" alt="Bstar_Project_Review" class="w-full object-cover mx-auto my-10">
                     <p class="px-8 -mt-5 mb-5 text-sm">
                         Bstar Project Review adalah sebuah Website E-Commerse jual/beli Laptop, Dibuat dengan Framework Bootstrap saya pun mencoba membuat Website statis E-Commerse ya walaupun proses pembuatan nya hanya memakan waktu 5 Jam saja .
                     </p>
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                 <div class="semibox1 hover:scale-105 transition-all duration-500 ease-in-out block bg-[#F87C58] rounded-md">
-                    <img src="asset_img/Screenshot 2024-02-01 233446.png" alt="Bstar_Project_Review" class="w-full object-cover mx-auto my-10">
+                    <img src="Screenshot 2024-02-01 233446.png" alt="Bstar_Project_Review" class="w-full object-cover mx-auto my-10">
                     <p class="px-8 -mt-5 mb-5 text-sm">
                         Berdasarkan rasa ingin belajar yang tinggi saya pun mencoba membuat sebuah Sample Website Undangan Digital dan kedepan nya Project Undangan digital termasuk kedalam Project Kreanovix .
                     </p>
@@ -77,7 +77,7 @@
                     </p>
                 </div>
                 <div class="semibox1 hover:scale-105 transition-all duration-500 ease-in-out block bg-[#F87C58] rounded-md">
-                    <img src="asset_img/Screenshot 2024-02-01 232132.png" alt="Bstar_Project_Review" class="w-full object-cover mx-auto my-10">
+                    <img src="Screenshot 2024-02-01 232132.png" alt="Bstar_Project_Review" class="w-full object-cover mx-auto my-10">
                     <p class="px-8 -mt-5 mb-5  text-sm">
                         Kreanovix adalah sebuah project yang saya buat, kedepan nya project tersebut akan berjalan dalam jasa pembuatan website baik website Undangan Pernikahan, Landing Page, Portofolio, Company Profile dan lain sebagainya. <br><br> disisi lain juga Kreanovix juga akan berkontribusi terhadap masyarakat guna memberikan informasi seputar Teknologi secara up to date.
                     </p>
