--- a/portofolio.html
+++ b/portofolio.html
@@ -33,7 +33,7 @@
             </a>
             <h1 class="text-center mt-16 text-2xl tracking-wide">Bryan Fery Ardiansyah</h1>
             <p class="text-sm font-extralight text-slate-800 text-center">Junior Web Developer</p>
-            <p class="px-12 py-6 text-left text-sm">" Web development adalah passion saya. Saya senang membuat website yang menarik, fungsional, dan responsif. Saya masih pemula, tapi saya tidak pernah berhenti belajar hal-hal baru. Saya selalu mencari sumber dan tutorial yang dapat membantu saya mempelajari web development lebih dalam lagi ."</p>
+            <p class="px-6 py-6 text-center text-sm">" Web development adalah passion saya. Saya senang membuat website yang menarik, fungsional, dan responsif. Saya masih pemula, tapi saya tidak pernah berhenti belajar hal-hal baru. Saya selalu mencari sumber dan tutorial yang dapat membantu saya mempelajari web development lebih dalam lagi ."</p>
             <button class="mx-auto block transition duration-500 ease-in-out py-4 pb-5 p-8 bg-[#f96a42] rounded-lg hover:scale-105 focus-within:ring focus:ring-white">
                 <a href="https://wa.me/6281615992725">
                     Hire Me Now!
@@ -82,7 +82,7 @@
                         Kreanovix adalah sebuah project yang saya buat, kedepan nya project tersebut akan berjalan dalam jasa pembuatan website baik website Undangan Pernikahan, Landing Page, Portofolio, Company Profile dan lain sebagainya. <br><br> disisi lain juga Kreanovix juga akan berkontribusi terhadap masyarakat guna memberikan informasi seputar Teknologi secara up to date.
                     </p>
                     <p class="bg-[#f96a42] p-4 block mx-auto rounded-md text-sm text-center hover:scale-105">
-                        <a href="https://magical-pegasus-49bb94.netlify.app/" target="_blank">Lihat</a>
+                        <a href="https://kenapa-harus-belajar-ngoding.netlify.app/" target="_blank">Lihat</a>
                     </p>
                 </div>
                 <button class="mx-auto mt-10 block transition duration-500 ease-in-out py-4 pb-5 p-8 bg-[#f96a42] rounded-lg hover:scale-105 focus-within:ring focus:ring-white">
